--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    a:hover {
     background: #786b59; /* Цвет фона под ссылкой */
     color: #ffe; /* Цвет ссылки */
-    background-image: url("https://github.com/wattsoup/wattsoup.github.io/blob/main/419080_size2.jpg");
+    background-image: url("https://github.com/wattsoup/wattsoup.github.io/blob/main/419080_size2.jpg?raw=true");
     background-size: cover;
    }
    h1 {
