--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <iframe width="560" height="315" src="https://www.youtube.com/embed/2BLjFN_-00s?start=14" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <img src="images/unnamed.png" alt="">
 
-  <h1 style="background-color: red"><a href="1.html">ПОХОРОНИ .ПРАЗДНИК</a></h1>
+  <h1 style="background-color: red"><a href="https://github.com/wattsoup/wattsoup.github.io/blob/main/419080_size2.jpg?raw=true">ПОХОРОНИ .ПРАЗДНИК</a></h1>
   <img src="https://github.com/wattsoup/wattsoup.github.io/blob/main/13-1.png" alt="">
 </body>
 </html>
