--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    a:hover {
     background: #786b59; /* Цвет фона под ссылкой */
     color: #ffe; /* Цвет ссылки */
-    background-image: url("419080_size2.jpg");
+    background-image: url("/images/041_RCCL0517_FC-2.jpg");
     background-size: cover;
    }
    h1 {
@@ -38,7 +38,7 @@
   <iframe width="560" height="315" src="https://www.youtube.com/embed/2BLjFN_-00s?start=14" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <img src="images/unnamed.png" alt="">
 
-  <h1 style="background-color: red"><a href="https://github.com/wattsoup/wattsoup.github.io/blob/main/419080_size2.jpg?raw=true">ПОХОРОНИ .ПРАЗДНИК</a></h1>
-  <img src="https://github.com/wattsoup/wattsoup.github.io/blob/main/13-1.png" alt="">
+  <h1 style="background-color: red"><a href="1.html">ПОХОРОНИ .ПРАЗДНИК</a></h1>
+  <img src="images/13-1.png" alt="">
 </body>
 </html>
