--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
     <img src="images/unnamed.png" alt="">
 
   <h1 style="background-color: red"><a href="1.html">ПОХОРОНИ .ПРАЗДНИК</a></h1>
-  <img src="images/13-1.png" alt="">
+  <img src="https://github.com/wattsoup/wattsoup.github.io/blob/main/13-1.png?raw=true" alt="">
 </body>
 </html>
