--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
      font-size: 72px;
    }
    body {
-     background-image: url("./images/419080_size2.jpg");
+     background-image: url("https://github.com/wattsoup/wattsoup.github.io/blob/main/419080_size2.jpg?raw=true");
    }
 
 
@@ -32,13 +32,13 @@
 
 
   <h2 style="background-color: red"><a href="1.html">ПОХОРОНИ</a></h2>
-  <img src="images/unnamed.png" alt="">
-  <img src="images/rozovyj-grob.jpg" alt="">
-  <img src="images/unnamed.png" alt="">
+  <img src="https://github.com/wattsoup/wattsoup.github.io/blob/main/unnamed.png?raw=true" alt="">
+  <img src="https://github.com/wattsoup/wattsoup.github.io/blob/main/rozovyj-grob.jpg?raw=true" alt="">
+  <img src="https://github.com/wattsoup/wattsoup.github.io/blob/main/unnamed.png?raw=true" alt="">
   <iframe width="560" height="315" src="https://www.youtube.com/embed/2BLjFN_-00s?start=14" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <img src="images/unnamed.png" alt="">
+    <img src="https://github.com/wattsoup/wattsoup.github.io/blob/main/unnamed.png?raw=true" alt="">
 
-  <h1 style="background-color: red"><a href="1.html">ПОХОРОНИ .ПРАЗДНИК</a></h1>
+  <h1 style="background-color: red"><a href="https://github.com/wattsoup/wattsoup.github.io/blob/main/gofra-krasnuy1.jpg?raw=true">ПОХОРОНИ .ПРАЗДНИК</a></h1>
   <img src="https://github.com/wattsoup/wattsoup.github.io/blob/main/13-1.png?raw=true" alt="">
 </body>
 </html>
