--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
      font-size: 72px;
    }
    body {
-     background-image: url("https://github.com/wattsoup/wattsoup.github.io/blob/main/419080_size2.jpg?raw=true");
+     background-image: url("https://sun9-55.userapi.com/IWwdcz0eyeu7I1u4JF37344GypFeoPWr8xZvXw/Mfx5Q4Tm2gc.jpg");
    }
 
 
@@ -31,7 +31,7 @@
 
 
 
-  <h2 style="background-color: red"><a href="1.html">ПОХОРОНИ</a></h2>
+  <h2 style="background-color: red"><a href="1.html">ХОРмузыkKkKОНИ</a></h2>
   <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/879247129&color=%23faff00&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/pendovka" title="pendovka" target="_blank" style="color: #cccccc; text-decoration: none;">pendovka</a> · <a href="https://soundcloud.com/pendovka/dududu-acrobatics" title="dududu acrobatics" target="_blank" style="color: #cccccc; text-decoration: none;">dududu acrobatics</a></div>
   <img src="https://github.com/wattsoup/wattsoup.github.io/blob/main/unnamed.png?raw=true" alt="">
   <img src="https://github.com/wattsoup/wattsoup.github.io/blob/main/rozovyj-grob.jpg?raw=true" alt="">
