--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
      font-size: 72px;
    }
    body {
-     background-image: url("https://sun9-55.userapi.com/IWwdcz0eyeu7I1u4JF37344GypFeoPWr8xZvXw/Mfx5Q4Tm2gc.jpg");
+     background-image: url("https://sun9-24.userapi.com/K68Fp-zADfs752Epf08kGTnJZmtrDBeZkVUUjg/MHSEnmjDoFY.jpg");
    }
 
 
@@ -34,12 +34,13 @@
   <h2 style="background-color: red"><a href="1.html">ХОРмузыkKkKОНИ</a></h2>
   <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/879247129&color=%23faff00&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/pendovka" title="pendovka" target="_blank" style="color: #cccccc; text-decoration: none;">pendovka</a> · <a href="https://soundcloud.com/pendovka/dududu-acrobatics" title="dududu acrobatics" target="_blank" style="color: #cccccc; text-decoration: none;">dududu acrobatics</a></div>
   <img src="https://github.com/wattsoup/wattsoup.github.io/blob/main/unnamed.png?raw=true" alt="">
-  <img src="https://github.com/wattsoup/wattsoup.github.io/blob/main/rozovyj-grob.jpg?raw=true" alt="">
+  <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/837442276&color=%233400fa&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/xxxglamourxxx" title="𝓰𝓵𝓪𝓶𝓸𝓾𝓻.𝓁𝒶𝒷𝑒𝓁" target="_blank" style="color: #cccccc; text-decoration: none;">𝓰𝓵𝓪𝓶𝓸𝓾𝓻.𝓁𝒶𝒷𝑒𝓁</a> · <a href="https://soundcloud.com/xxxglamourxxx/ehh-hahah-bez-powodu" title="ehh hahah - bez powodu" target="_blank" style="color: #cccccc; text-decoration: none;">ehh hahah - bez powodu</a></div>
+  <img src="https://vk.com/doc76185219_574819279?hash=bc4acf73eeaac907c3&dl=e5874875e66312fe13" alt="">
   <img src="https://github.com/wattsoup/wattsoup.github.io/blob/main/unnamed.png?raw=true" alt="">
   <iframe width="560" height="315" src="https://www.youtube.com/embed/2BLjFN_-00s?start=14" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <img src="https://github.com/wattsoup/wattsoup.github.io/blob/main/unnamed.png?raw=true" alt="">
 
-  <h1 style="background-color: red"><a href="https://github.com/wattsoup/wattsoup.github.io/blob/main/gofra-krasnuy1.jpg?raw=true">ПОХОРОНИ .ПРАЗДНИК</a></h1>
+  <h1 style="background-color: red"><a href="https://github.com/wattsoup/wattsoup.github.io/blob/main/gofra-krasnuy1.jpg?raw=true">ххххх***** .ПРАЗДНИК</a></h1>
   <img src="https://github.com/wattsoup/wattsoup.github.io/blob/main/13-1.png?raw=true" alt="">
 </body>
 </html>
