--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
    h1 {
      font-size: 72px;
    }
+   h3 {
+    font-style: oblique;
+    font-size: 60px;
+    color: black; 
+   }
+    
    body {
      background-image: url("https://sun9-24.userapi.com/K68Fp-zADfs752Epf08kGTnJZmtrDBeZkVUUjg/MHSEnmjDoFY.jpg");
    }
@@ -48,5 +54,7 @@
   <h1 style="background-color: red"><a href="https://github.com/wattsoup/wattsoup.github.io/blob/main/gofra-krasnuy1.jpg?raw=true">ххххх***** .ПРАЗДНИК</a></h1>
   <img src="https://github.com/wattsoup/wattsoup.github.io/blob/main/13-1.png?raw=true" alt="">
   <h2 style="background-color: green"><a href="1.html">ostatke sladke?</a></h2>
+  <h3 style="background-color: white"><a href="1.html">c'est une LOOSE-LOOP. tres CHICK. TRES BEAU</a></h2>
+  
 </body>
 </html>
