--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
   <img src="https://github.com/wattsoup/wattsoup.github.io/blob/main/13-1.png?raw=true" alt="">
   <h2 style="background-color: green"><a href="1.html">ostatke sladke?</a></h2>
   <iframe width="360" height="315" src="https://www.youtube.com/embed/eAr25DwHpkM?start=42" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <iframe width="360" height="315" src="https://www.youtube.com/embed/bYGYFbAtYnc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <iframe width="360" height="315" src="https://www.youtube.com/embed/Wp7VjBtOJ74" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   <h3 style="background-color: white"><a href="1.html">01/11 c'est une LOOSE-LOOP. tres CHICK. TRES BEAU</a></h3>
   
 </body>
