--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 
   <h1 style="background-color: red"><a href="https://github.com/wattsoup/wattsoup.github.io/blob/main/gofra-krasnuy1.jpg?raw=true">ххххх***** .ПРАЗДНИК</a></h1>
   <img src="https://github.com/wattsoup/wattsoup.github.io/blob/main/13-1.png?raw=true" alt="">
+  <img src="https://lh3.googleusercontent.com/proxy/5TNs7UbhEF36Zonna9rq8MOutd4yOx8ja6UoMH4OV6Vkb2mL1etS-gy-cuparROUI2xSgAFisRcF68j1-GYhTnU4rxZomagIxuxY9U77iAGpDrc" alt="">
   <h2 style="background-color: green"><a href="1.html">ostatke sladke?</a></h2>
   <iframe width="360" height="315" src="https://www.youtube.com/embed/eAr25DwHpkM?start=42" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   <iframe width="360" height="315" src="https://www.youtube.com/embed/bYGYFbAtYnc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
