--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
   <img src="https://github.com/wattsoup/wattsoup.github.io/blob/main/13-1.png?raw=true" alt="">
   <img src="https://lh3.googleusercontent.com/proxy/5TNs7UbhEF36Zonna9rq8MOutd4yOx8ja6UoMH4OV6Vkb2mL1etS-gy-cuparROUI2xSgAFisRcF68j1-GYhTnU4rxZomagIxuxY9U77iAGpDrc" alt="">
   <h2 style="background-color: green"><a href="1.html">ostatke sladke?</a></h2>
-  <iframe width="360" height="315" src="https://www.youtube.com/embed/eAr25DwHpkM?start=42" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <iframe width="360" height="315" src="https://www.youtube.com/embed/eAr25DwHpkM?start=42&autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   <iframe width="360" height="315" src="https://www.youtube.com/embed/bYGYFbAtYnc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  <iframe width="360" height="315" src="https://www.youtube.com/embed/Wp7VjBtOJ74" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <iframe width="360" height="315" src="https://www.youtube.com/embed/Wp7VjBtOJ74?start=311&autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   <iframe width="260" height="315" src="https://www.youtube.com/embed/JUqW9zCrKYk?start=112" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   <iframe width="260" height="315" src="https://www.youtube.com/embed/6q6qL5sm2m4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   <h3 style="background-color: white"><a href="1.html">01/11 c'est une LOOSE-LOOP. tres CHICK. TRES BEAU</a></h3>
   
 </body>
-</html>
+</html> 
