--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 
 
   <h2 style="background-color: red"><a href="1.html">ХОРмузыkKkKОНИ</a></h2>
+  <img src="https://sun9-7.userapi.com/iOLeyu1zUpZoaL1Qt2p6sGZDrg-IMT1ipHEM4A/yyM9fWMgR3s.jpg" alt="">
   <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=1951876192/size=large/bgcol=ffffff/linkcol=f171a2/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://talnik.bandcamp.com/album/--3">Сипс by Тальник</a></iframe>
   <iframe width="100%" height="166" src="https://www.youtube.com/embed/ifIH_66tjOc?autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   <iframe width="100%" height="166" src="https://www.youtube.com/embed/76nN04vrVGE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
